--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,6 +4,7 @@
     <script src="https://cdn.scaledrone.com/scaledrone.min.js"></script>
     <meta charset="utf-8" />
     <link rel="icon" href="pawprint.png" />
+    <link href="css/owfont-regular.css" rel="stylesheet" type="text/css" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
